--- a/Angular/package.json
+++ b/Angular/package.json
@@ -34,6 +34,7 @@
     "core-js": "^3.6.4",
     "isomorphic-fetch": "^2.2.1",
     "msal": "^1.3.2",
+    "ngx-material-timepicker": "^5.5.3",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
