--- a/Spring/src/main/resources/application.yml
+++ b/Spring/src/main/resources/application.yml
@@ -5,6 +5,33 @@ server:
     
 
 spring:
+  datasource:
+    url: jdbc:sqlserver://mps-rooms.database.windows.net:1433;databaseName=MpsRooms
+    username: adminMPS
+    password: '!passw0rd'
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    hikari:
+      data-source-properties:
+        cachePrepStmts: true
+        prepStmtCacheSize: 250
+        prepStmtCacheSqlLimit: 2048
+        useServerPrepStmts: false
+      maximum-pool-size: 50
+  jpa:
+    database-platform: org.hibernate.dialect.SQLServer2008Dialect
+    database: SQL_SERVER
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate.dialect: org.hibernate.dialect.SQLServer2012Dialect
+      hibernate.jdbc.batch_size: 20
+      hibernate.cache.use_second_level_cache: false
+      hibernate.enable_lazy_load_no_trans: true
+      hibernate.show_sql: true
+      hibernate.format_sql: true
+  jta:
+    enabled: false
   security: 
     oauth2:
       resourceserver:
